src/css/components/_v-scroll-menu-item.scss
.vscrollmenu-item {
    @include display(flex);
    @include flex-direction(row);
    @include justify-content(space-between);
    @include align-items(center);
    height: calc((#{$master-height} - 75px) / 5);

    text-decoration: none;
    color: color(white);

    border-bottom: 2px solid;

    &__primary {
        display: flex;
        align-items: center;

        width: 100%;
        height: 100%;
    }

    &__image {
        padding: 1% 1%;
        flex: 0.75;
        align-self: flex-start;
        border-radius: 4px;

        height: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;

        img {
            margin:auto;
            max-width: 100%;
        }

        div {
            width: 100%;
            height: 100%;
            display: flex;
            flex-direction: column;
            align-items: center;

            canvas {
                margin:auto;
                max-width: 100%;
            }
            
            svg {
                margin:auto;
                max-width: 100%;
            }
        }
    }

    &__name {
        flex: 6;
        margin-left: 2%;
        display: flex;
        flex-direction: column;
    }

    &__arrow {
        flex: 0.5;
        margin: auto;
        align-self: flex-end;

        svg {
            display: block;
            width: 26px;
            height: 44px;
            margin: auto;
        }
    }
}

.vscrollmenu-item-disabled {
    opacity: 0.7;
}

.mw-100px {
    max-width: 100px;
}

